fix: fix note-head; fix vertical alignment.

--- a/_sass/includes/_nav.scss
+++ b/_sass/includes/_nav.scss
@@ -41,7 +41,6 @@
   }
 }
 
-
 // note-breadcrumb nav
 
 .note-head-nav {
@@ -53,20 +52,20 @@
   white-space: nowrap;  
 
   .note-head-breadcrumbs {
-    padding-left: $sp-2 !important;
-    // margin-bottom: $sp-3;
+    padding: $sp-2;
+    margin-bottom: 0;
+    margin-top: 0;
+    align-self: center;
     list-style: none;
   
     .note-head-breadcrumb {
-      display: table-cell;
       @include fs-2;
-    
+      
       &::before {
         display: none;
       }
     
       &::after {
-        display: inline-block;
         margin-right: $sp-2;
         margin-left: $sp-2;
         color: $grey-dk-000;
